methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: ')' expected but ';' found.
def isFacingTrail():Boolean = {while (getCouleurSol();==Color.green) && !(estSurBiscuit) 
                                                     ^SlugTracking:4: error: ';' expected but '.' found.
def isFacingTrail():Boolean = {while (getCouleurSol();==Color.green) && !(estSurBiscuit) 
                                                             ^